basic groundwork set up

--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>Translink PWA</title>
+  <!--<link rel="manifest" href="/manifest.json">-->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./src/styles/index.css">
+</head>
+
 <body>
+  <header class="header">
+    <h1 class="header__title">Translink PWA</h1>
+  </header>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+  <nav class="nav">
+    This is the nav
+  </nav>
 
+  <main class="app__container">
+  </main>
+
+  <div class="dialog__container">
+    This is the dialog box
+  </div>
+
+  <div class="loader">
+    this is the spinner
+  </div>
+
+  <script src="./src/index.ts" async></script>
 </body>
 </html>
