rough autocomplete and routing

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 <body>
   <header class="header">
     <h1 class="header__title">Translink PWA</h1>
+    <button class="backbutton">Back</button>
   </header>
-
-  <nav class="nav">
-    This is the nav
-  </nav>
 
   <main class="app__container">
   </main>
 
-  <div class="dialog__container">
+  <!-- <div class="dialog__container">
     This is the dialog box
-  </div>
+  </div> -->
 
   <div class="loader">
     this is the spinner
+  </div>
+
+  <div class="offline__indicator">
+    This will indicate when a user is offline
   </div>
 
   <script src="./src/index.ts" async></script>
