--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header gradient">
     <h1 class="header__title">Translink PWA</h1>
     <button class="backbutton">Back</button>
   </header>
