workbox webpack config, dockerfile, type safe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <!--<link rel="manifest" href="/manifest.json">-->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./src/styles/index.css">
 </head>
 
 <body>
@@ -18,18 +17,8 @@
   <main class="app__container">
   </main>
 
-  <!-- <div class="dialog__container">
-    This is the dialog box
-  </div> -->
-
-  <div class="loader">
-    this is the spinner
-  </div>
-
   <div class="offline__indicator">
-    This will indicate when a user is offline
+    You are Offline
   </div>
-
-  <script src="./src/index.ts" async></script>
 </body>
 </html>
