--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
    <meta name="apple-mobile-web-app-capable" content="yes">
    <meta name="apple-mobile-web-app-status-bar-style" content="black">
    <meta name="apple-mobile-web-app-title" content="Translink PWA">
-   <link rel="apple-touch-icon" href="assets/translink-pwa-icon-152.png">
-   <link rel="manifest" href="/manifest.json">
+   <link rel="apple-touch-icon" href="/pwa/assets/translink-pwa-icon-152.png">
+   <link rel="manifest" href="/pwa/manifest.json">
 </head>
 
 <body>
