--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>Translink PWA</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#2F3BA2">
-  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <head>
+    <meta charset="utf-8" />
+    <title>Translink PWA</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#2F3BA2" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins"
+      rel="stylesheet"
+    />
 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Translink PWA" />
+    <link rel="apple-touch-icon" href="/assets/translink-pwa-icon-152.png" />
+    <link rel="manifest" href="/manifest.json" />
+  </head>
 
-   <meta name="apple-mobile-web-app-capable" content="yes">
-   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-   <meta name="apple-mobile-web-app-title" content="Translink PWA">
-   <link rel="apple-touch-icon" href="/assets/translink-pwa-icon-152.png">
-   <link rel="manifest" href="/manifest.json">
-</head>
+  <body>
+    <div class="background"></div>
 
-<body>
-  <main class="app__container">
-  </main>
+    <main class="app__container"></main>
 
-  <div class="offline__indicator">
-    You are Offline
-  </div>
-</body>
+    <div class="offline__indicator">
+      You are Offline
+    </div>
+  </body>
 </html>
