--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2F3BA2" />
     <link
+      ref="preload"
       href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
+      as="style"
     />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
