remove preload font

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#2F3BA2" />
     <link
-      ref="preload"
       href="https://fonts.googleapis.com/css?family=Poppins"
-      as="style"
+      rel="stylesheet"
     />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -22,10 +21,10 @@
   <body>
     <div class="background"></div>
 
-    <main class="app__container"></main>
+      <main class="app__container"></main>
 
-    <div class="offline__indicator">
-      You are Offline
-    </div>
+      <div class="offline__indicator">
+        You are Offline
+      </div>
   </body>
 </html>
